--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tracing = "0.1.37"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
+dotenvy = "0.15.7"
 
 [lib]
 name = "game_recommender"
