--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ tracing = "0.1.37"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
+once_cell = "1.17"
+
+[dev-dependencies]
 dotenvy = "0.15.7"
 
 [lib]
