--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
 once_cell = "1.17"
+chrono = "0.4.39"
 
 [dev-dependencies]
 dotenvy = "0.15.7"
