--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,18 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-runtime = "0.52.0"
-shuttle-shared-db = { version = "0.52", features = ["postgres"] }
-shuttle-serenity = "0.52.0"
-tokio = "1.26.0"
-tracing = "0.1.37"
-sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
+once_cell = "1.17"
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
-once_cell = "1.17"
-chrono = "0.4.39"
+serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+shuttle-runtime = "0.52.0"
+shuttle-serenity = "0.52.0"
+shuttle-shared-db = { version = "0.52", features = ["postgres"] }
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
+tokio = "1.26.0"
+tokio-cron-scheduler = "0.13.0"
+tracing = "0.1.37"
+
 
 [dev-dependencies]
 dotenvy = "0.15.7"
