--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
+chrono = "0.4.40"
 once_cell = "1.17"
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
