--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ chrono = "0.4.40"
 once_cell = "1.17"
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
-serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
+serenity = { version = "0.12.0", default-features = false, features = ["client", "collector", "gateway", "rustls_backend", "model"] }
 shuttle-runtime = "0.52.0"
 shuttle-serenity = "0.52.0"
 shuttle-shared-db = { version = "0.52", features = ["postgres"] }
