--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-chrono = "0.4.40"
 once_cell = "1.17"
 reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1"
 serenity = { version = "0.12.0", default-features = false, features = ["client", "collector", "gateway", "rustls_backend", "model"] }
 shuttle-runtime = "0.52.0"
 shuttle-serenity = "0.52.0"
