--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,22 +5,22 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
+dotenvy = "0.15.7"
 once_cell = "1.17"
-reqwest = "0.12.12"
+rand = "0.9.0"
+reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1"
 serenity = { version = "0.12.0", default-features = false, features = ["client", "collector", "gateway", "rustls_backend", "model"] }
-shuttle-runtime = "0.52.0"
-shuttle-serenity = "0.52.0"
-shuttle-shared-db = { version = "0.52", features = ["postgres"] }
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
-tokio = "1.26.0"
+tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.13.0"
 tracing = "0.1.37"
+uuid = {version = "1.16.0", features = ["v4"]}
+
 
 
 [dev-dependencies]
-dotenvy = "0.15.7"
+serde_json = "1.0.140"
 wiremock = "0.6.3"
 
 [lib]
