--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = "0.13.0"
 tracing = "0.1.37"
 uuid = {version = "1.16.0", features = ["v4"]}
+serde_json = "1.0.140"
 
 
 
