--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 dotenvy = "0.15.7"
+itertools = "0.14.0"
 once_cell = "1.17"
 rand = "0.9.0"
 reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
@@ -17,8 +18,6 @@ tokio-cron-scheduler = "0.13.0"
 tracing = "0.1.37"
 uuid = {version = "1.16.0", features = ["v4"]}
 serde_json = "1.0.140"
-
-
 
 [dev-dependencies]
 serde_json = "1.0.140"
