--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   test-db:
     image: postgres:16
@@ -21,8 +22,6 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - test_pgdata:/var/lib/postgresql/data
+      - ./test_pgdata:/var/lib/postgresql/data
 
-volumes:
-  pgdata:
-  test_pgdata:
+
